Main page layout

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div class="flex h3 justify-around items-center sans">
+    <div class="flex h3 justify-around items-center sans fixed bg-white w-100 top-0">
       <span class="flex items-center serif">
         <span class="logo"></span> Pattern
       </span>
